[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ddalangoo-crewai"
version = "0.1.0"
description = "딸랑구 쇼핑 어시스턴트 — CrewAI 구현"
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.80.0",
    "crewai-tools>=0.14.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
